--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
   "bugs": {
     "url": "https://github.com/stkterry/ye-olde-slaec/issues"
   },
-  "homepage": "https://github.com/stkterry/ye-olde-slaec#readme"
+  "homepage": "https://github.com/stkterry/ye-olde-slaec#readme",
+  "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-plugin-react": "^7.14.2"
+  }
 }
