--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,13 +4,18 @@ development:
 test:
   adapter: async
 
+production:
+  adapter: redis
+  url: redis://redistogo:8bac8a16cbbfed01add749f7d3fb828a@tarpon.redistogo.com:11980/
+  channel_prefix: ye_olde_slaec_production
+
+
 # production:
 #   adapter: redis
 #   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
 #   channel_prefix: ye_olde_slaec_production
 
-
-production:
-  adapter: redis
-  url: <%= ENV['REDIS_URL'] %>
-  channel_prefix: test_message_app_production
+# production:
+#   adapter: redis
+#   url: <%= ENV['REDIS_URL'] %>
+#   channel_prefix: test_message_app_production
